# batch-config

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTERVIEW_GUIDE.md  Makefile  README.md  docker-compose.yml  prompt-claude-3.7-sonnet-deployment.md  prompt-claude-3.7-sonnet.md  prompt.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: cc2fcff00cdb_initial_schema_batches_and_batch_items.py
app/: main.py  worker.py
app/api/: deps.py  error_handlers.py  middleware.py
app/api/routes/: batches.py  health.py
app/core/: config.py  exceptions.py  logging.py
app/database/: session.py
app/models/: __init__.py  batch.py
app/repositories/: batch_repository.py
app/schemas/: batch.py
app/services/: batch_service.py  item_processor.py  worker_service.py
tests/: conftest.py  test_api_batches.py  test_batch_repository.py  test_batch_service.py  test_error_handling.py  test_item_processor.py  test_worker_service.py
